# cpsc_362_sp2025_group5

./: .gitignore  README.md  app.py  blackjack.py  card.py  dealer.py  deck.py  extract.py  game.py  game_system.py  global_balance.py  hand.py  player.py  requirements.txt  test_maze.py
.github/workflows/: lint.yml
Slot_Machine/: app.py  blackbox_test.py  game_system.py  paylines.py  payouts.py  player.py  reels.py  symbols.py  tempCodeRunnerFile.py  test.py  whitebox_test.py
Slot_Machine/static/: background_music.m4a  script.js  spin_audio.m4a  styles.css
Slot_Machine/templates/: slot_display.html
blackjack/: app.py  blackjack.py  card.py  dealer.py  deck.py  game_system.py  hand.py  player.py
blackjack/static/: game.js  title_screen.js
blackjack/templates/: blackjack.html  blackjack_title.html  game.html  (+1 more)
brick-breaker/: brick_breaker.js  brick_breaker_powerup_test.js  index.html  test.html
flappy-bird-daniel-zamone/: flappybird.css  flappybird.js  index.html
space-shooter/: asteroid.py  bullet.py  globals.py  main.py  object.py  player.py  powerup.py  sounds.py  vector.py
space_shooter/: asteroid.py  bullet.py  globals.py  main.py  player.py  pyproject.toml  routes.py  sound.py  test.py  vector.py
static/: app.js  blackjack.js  brick_breaker.js  brick_breaker_test.js  flappybird.js  game.js  home.js  styles.css  title_screen.js
templates/: base.html  blackjack.html  brick_breaker.html  example.html  flappy_bird.html  game.html  home.html  homepage.html  index.html  title_screen.html  zmaze.html
zmaze/: app.py  blackbox_test.py  whitebox_tests.py
(+12 files in other folders)
